Fix overflow scrolling

--- a/assets/css/_header-archive.scss
+++ b/assets/css/_header-archive.scss
@@ -12,9 +12,11 @@
     width: 100%;
     height: 100%;
     overflow: scroll;
+    transform: translateZ(0);
     &-inner {
       transition: .3s;
       opacity: 0;
+      transform: translateZ(0);
     }
   }
   &__nav {
